# Quant-Research-Platform

./: .env  .env.example  .gitignore  README.md  pyproject.toml
scripts/: check_oanda_connection.py  first_dataset.py  second_dataset.py
src/config/: logging.py  settings.py
src/data/: __init__.py  market_data_client.py
src/execution/: __init__.py  oanda.py
